# compressedseg

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  README.md  appveyor.yml  automated_test.py  build_linux.sh  compressed_segmentation.cpp  compressed_segmentation.pyx  cs.cpp  manylinux1.Dockerfile  manylinux2010.Dockerfile  manylinux2014.Dockerfile  perf.py  pyproject.toml  random_test.cpp  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheel.yml  run_tests.yaml
cseg_cli/: cli.py
include/: decompress_segmentation.h
src/: compress_segmentation.cc  compressed_segmentation.cpp  compressed_segmentation.pyx  decompress_segmentation.cc
