[metadata]
name = compressed_segmentation
url = https://github.com/william-silversmith/compressedseg
summary = Neuroglancer compressed_segmentation codec.
description_content_type = text/markdown
description_file = README.md
author = Jeremy Maitin-Shepard, Stephen Plaza, and William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/janelia-flyem/compressedseg
licenses = LICENSE.txt
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    compressed_segmentation
    cseg_cli
